sprint8 준비를 위한 베이스코드