@@ -1,5 +1,13 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verify;
+
 import com.sprint.mission.discodeit.dto.data.ChannelDto;
 import com.sprint.mission.discodeit.dto.request.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelCreateRequest;
@@ -16,219 +24,205 @@ import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import java.time.Instant;
-import org.assertj.core.api.InstanceOfAssertFactories;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.BDDMockito.*;
+import org.springframework.test.util.ReflectionTestUtils;
 
 @ExtendWith(MockitoExtension.class)
 class BasicChannelServiceTest {
 
   @Mock
   private ChannelRepository channelRepository;
+
   @Mock
   private ReadStatusRepository readStatusRepository;
+
   @Mock
   private MessageRepository messageRepository;
+
   @Mock
   private UserRepository userRepository;
+
   @Mock
   private ChannelMapper channelMapper;
 
   @InjectMocks
   private BasicChannelService channelService;
 
-  //create(PUBLIC)
-  @Test
-  void givenPublicRequest_whenCreate_thenReturnsDto() {
-    var req = new PublicChannelCreateRequest("Announcements", "All users");
-    var channel = new Channel(ChannelType.PUBLIC, "Announcements", "All users");
-    var expectedDto = new ChannelDto(
-        channel.getId(),
-        ChannelType.PUBLIC,
-        "Announcements",
-        "All users",
-        Collections.emptyList(),
-        null
-    );
+  private UUID channelId;
+  private UUID userId;
+  private String channelName;
+  private String channelDescription;
+  private Channel channel;
+  private ChannelDto channelDto;
+  private User user;
 
-    given(channelRepository.save(any(Channel.class))).willReturn(channel);
-    given(channelMapper.toDto(any(Channel.class))).willReturn(expectedDto);
+  @BeforeEach
+  void setUp() {
+    channelId = UUID.randomUUID();
+    userId = UUID.randomUUID();
+    channelName = "testChannel";
+    channelDescription = "testDescription";
 
-    ChannelDto result = channelService.create(req);
-
-    then(channelRepository).should().save(any(Channel.class));
-    then(channelMapper).should().toDto(any(Channel.class));
-    assertThat(result).isEqualTo(expectedDto);
-  }
-
-  //create(PRIVATE)
-  @Test
-  void givenPrivateRequest_whenCreate_thenReturnsDtoAndSavesStatuses() {
-    UUID userId1 = UUID.randomUUID();
-    UUID userId2 = UUID.randomUUID();
-    var req = new PrivateChannelCreateRequest(List.of(userId1, userId2));
-
-    var channel = new Channel(ChannelType.PRIVATE, null, null);
-    var user1 = new User("u1", "u1@example.com", "pw", null);
-    var user2 = new User("u2", "u2@example.com", "pw", null);
-
-    given(channelRepository.save(any(Channel.class))).willReturn(channel);
-    given(userRepository.findAllById(req.participantIds()))
-        .willReturn(List.of(user1, user2));
-
-    var expectedDto = new ChannelDto(
-        channel.getId(),
-        ChannelType.PRIVATE,
-        null,
-        null,
-        Collections.emptyList(),
-        null
-    );
-    given(channelMapper.toDto(any(Channel.class))).willReturn(expectedDto);
-
-    ChannelDto result = channelService.create(req);
-
-    then(channelRepository).should().save(any(Channel.class));
-    then(userRepository).should().findAllById(req.participantIds());
-    then(readStatusRepository).should().saveAll(anyList());
-    then(channelMapper).should().toDto(any(Channel.class));
-    assertThat(result).isEqualTo(expectedDto);
-  }
-
-  //find
-  @Test
-  void givenExistingId_whenFind_thenReturnsDto() {
-    UUID id = UUID.randomUUID();
-    var channel = new Channel(ChannelType.PUBLIC, "Name", "Desc");
-
-    var expectedDto = new ChannelDto(
-        id,
-        ChannelType.PUBLIC,
-        "Name",
-        "Desc",
-        Collections.emptyList(),
-        null
-    );
-    given(channelRepository.findById(id)).willReturn(Optional.of(channel));
-    given(channelMapper.toDto(any(Channel.class))).willReturn(expectedDto);
-
-    ChannelDto result = channelService.find(id);
-
-    then(channelRepository).should().findById(id);
-    then(channelMapper).should().toDto(any(Channel.class));
-    assertThat(result).isEqualTo(expectedDto);
+    channel = new Channel(ChannelType.PUBLIC, channelName, channelDescription);
+    ReflectionTestUtils.setField(channel, "id", channelId);
+    channelDto = new ChannelDto(channelId, ChannelType.PUBLIC, channelName, channelDescription,
+        List.of(), Instant.now());
+    user = new User("testUser", "test@example.com", "password", null);
   }
 
   @Test
-  void givenUnknownId_whenFind_thenThrowsNotFound() {
-    UUID id = UUID.randomUUID();
-    given(channelRepository.findById(id)).willReturn(Optional.empty());
+  @DisplayName("공개 채널 생성 성공")
+  void createPublicChannel_Success() {
+    // given
+    PublicChannelCreateRequest request = new PublicChannelCreateRequest(channelName,
+        channelDescription);
+    given(channelMapper.toDto(any(Channel.class))).willReturn(channelDto);
 
-    assertThatThrownBy(() -> channelService.find(id))
-        .isInstanceOf(ChannelNotFoundException.class)
-        .extracting("details", InstanceOfAssertFactories.MAP)
-        .containsEntry("channelId", id);
+    // when
+    ChannelDto result = channelService.create(request);
 
-    then(channelRepository).should().findById(id);
+    // then
+    assertThat(result).isEqualTo(channelDto);
+    verify(channelRepository).save(any(Channel.class));
   }
 
   @Test
-  void givenSubscriptions_whenFindAllByUserId_thenReturnsDtos() {
-    UUID userId = UUID.randomUUID();
-    var ch1 = new Channel(ChannelType.PUBLIC, "A", "a");
-    var ch2 = new Channel(ChannelType.PUBLIC, "B", "b");
-    var rs1 = new ReadStatus(new User("x", "x@x", "pw", null), ch1, Instant.now());
-    var rs2 = new ReadStatus(new User("y", "y@y", "pw", null), ch2, Instant.now());
-    var expectedDto1 = new ChannelDto(ch1.getId(), ChannelType.PUBLIC, "A", "a",
-        Collections.emptyList(), null);
-    var expectedDto2 = new ChannelDto(ch2.getId(), ChannelType.PUBLIC, "B", "b",
-        Collections.emptyList(), null);
+  @DisplayName("비공개 채널 생성 성공")
+  void createPrivateChannel_Success() {
+    // given
+    List<UUID> participantIds = List.of(userId);
+    PrivateChannelCreateRequest request = new PrivateChannelCreateRequest(participantIds);
+    given(userRepository.findAllById(eq(participantIds))).willReturn(List.of(user));
+    given(channelMapper.toDto(any(Channel.class))).willReturn(channelDto);
 
-    given(readStatusRepository.findAllByUserId(userId)).willReturn(List.of(rs1, rs2));
-    given(channelRepository.findAllByTypeOrIdIn(eq(ChannelType.PUBLIC), anyList()))
-        .willReturn(List.of(ch1, ch2));
-    given(channelMapper.toDto(any(Channel.class)))
-        .willReturn(expectedDto1)
-        .willReturn(expectedDto2);
+    // when
+    ChannelDto result = channelService.create(request);
 
-    var results = channelService.findAllByUserId(userId);
-
-    then(readStatusRepository).should().findAllByUserId(userId);
-    then(channelRepository).should().findAllByTypeOrIdIn(eq(ChannelType.PUBLIC), anyList());
-    assertThat(results).containsExactly(expectedDto1, expectedDto2);
-  }
-
-  //update
-  @Test
-  void givenPublicChannel_whenUpdate_thenReturnsDto() {
-    UUID id = UUID.randomUUID();
-    var existing = new Channel(ChannelType.PUBLIC, "old", "d");
-    var req = new PublicChannelUpdateRequest("new", "nd");
-
-    var expectedDto = new ChannelDto(id, ChannelType.PUBLIC, "new", "nd", Collections.emptyList(),
-        null);
-    given(channelRepository.findById(id)).willReturn(Optional.of(existing));
-    given(channelMapper.toDto(any(Channel.class))).willReturn(expectedDto);
-
-    ChannelDto result = channelService.update(id, req);
-
-    then(channelRepository).should().findById(id);
-    then(channelMapper).should().toDto(any(Channel.class));
-    assertThat(result).isEqualTo(expectedDto);
+    // then
+    assertThat(result).isEqualTo(channelDto);
+    verify(channelRepository).save(any(Channel.class));
+    verify(readStatusRepository).<ReadStatus>saveAll(anyList());
   }
 
   @Test
-  void givenPrivateChannel_whenUpdate_thenThrowsException() {
-    UUID id = UUID.randomUUID();
-    var existing = new Channel(ChannelType.PRIVATE, null, null);
-    var req = new PublicChannelUpdateRequest("x", "y");
+  @DisplayName("채널 조회 성공")
+  void findChannel_Success() {
+    // given
+    given(channelRepository.findById(eq(channelId))).willReturn(Optional.of(channel));
+    given(channelMapper.toDto(any(Channel.class))).willReturn(channelDto);
 
-    given(channelRepository.findById(id)).willReturn(Optional.of(existing));
+    // when
+    ChannelDto result = channelService.find(channelId);
 
-    assertThatThrownBy(() -> channelService.update(id, req))
+    // then
+    assertThat(result).isEqualTo(channelDto);
+  }
+
+  @Test
+  @DisplayName("존재하지 않는 채널 조회 시 실패")
+  void findChannel_WithNonExistentId_ThrowsException() {
+    // given
+    given(channelRepository.findById(eq(channelId))).willReturn(Optional.empty());
+
+    // when & then
+    assertThatThrownBy(() -> channelService.find(channelId))
+        .isInstanceOf(ChannelNotFoundException.class);
+  }
+
+  @Test
+  @DisplayName("사용자별 채널 목록 조회 성공")
+  void findAllByUserId_Success() {
+    // given
+    List<ReadStatus> readStatuses = List.of(new ReadStatus(user, channel, Instant.now()));
+    given(readStatusRepository.findAllByUserId(eq(userId))).willReturn(readStatuses);
+    given(channelRepository.findAllByTypeOrIdIn(eq(ChannelType.PUBLIC), eq(List.of(channel.getId()))))
+        .willReturn(List.of(channel));
+    given(channelMapper.toDto(any(Channel.class))).willReturn(channelDto);
+
+    // when
+    List<ChannelDto> result = channelService.findAllByUserId(userId);
+
+    // then
+    assertThat(result).containsExactly(channelDto);
+  }
+
+  @Test
+  @DisplayName("공개 채널 수정 성공")
+  void updatePublicChannel_Success() {
+    // given
+    String newName = "newChannelName";
+    String newDescription = "newDescription";
+    PublicChannelUpdateRequest request = new PublicChannelUpdateRequest(newName, newDescription);
+
+    given(channelRepository.findById(eq(channelId))).willReturn(Optional.of(channel));
+    given(channelMapper.toDto(any(Channel.class))).willReturn(channelDto);
+
+    // when
+    ChannelDto result = channelService.update(channelId, request);
+
+    // then
+    assertThat(result).isEqualTo(channelDto);
+  }
+
+  @Test
+  @DisplayName("비공개 채널 수정 시도 시 실패")
+  void updatePrivateChannel_ThrowsException() {
+    // given
+    Channel privateChannel = new Channel(ChannelType.PRIVATE, null, null);
+    PublicChannelUpdateRequest request = new PublicChannelUpdateRequest("newName",
+        "newDescription");
+    given(channelRepository.findById(eq(channelId))).willReturn(Optional.of(privateChannel));
+
+    // when & then
+    assertThatThrownBy(() -> channelService.update(channelId, request))
         .isInstanceOf(PrivateChannelUpdateException.class);
-
-    then(channelRepository).should().findById(id);
-    then(channelMapper).should(never()).toDto(any());
   }
 
   @Test
-  void givenExistingId_whenDelete_thenDeletesEverything() {
-    UUID id = UUID.randomUUID();
-    given(channelRepository.existsById(id)).willReturn(true);
+  @DisplayName("존재하지 않는 채널 수정 시도 시 실패")
+  void updateChannel_WithNonExistentId_ThrowsException() {
+    // given
+    PublicChannelUpdateRequest request = new PublicChannelUpdateRequest("newName",
+        "newDescription");
+    given(channelRepository.findById(eq(channelId))).willReturn(Optional.empty());
 
-    channelService.delete(id);
-
-    then(channelRepository).should().existsById(id);
-    then(messageRepository).should().deleteAllByChannelId(id);
-    then(readStatusRepository).should().deleteAllByChannelId(id);
-    then(channelRepository).should().deleteById(id);
+    // when & then
+    assertThatThrownBy(() -> channelService.update(channelId, request))
+        .isInstanceOf(ChannelNotFoundException.class);
   }
 
   @Test
-  void givenUnknownId_whenDelete_thenThrowsNotFound() {
-    UUID id = UUID.randomUUID();
-    given(channelRepository.existsById(id)).willReturn(false);
-    
-    assertThatThrownBy(() -> channelService.delete(id))
-        .isInstanceOf(ChannelNotFoundException.class)
-        .extracting("details", InstanceOfAssertFactories.MAP)
-        .containsEntry("channelId", id);
+  @DisplayName("채널 삭제 성공")
+  void deleteChannel_Success() {
+    // given
+    given(channelRepository.existsById(eq(channelId))).willReturn(true);
 
-    then(channelRepository).should().existsById(id);
-    then(messageRepository).should(never()).deleteAllByChannelId(any());
-    then(readStatusRepository).should(never()).deleteAllByChannelId(any());
-    then(channelRepository).should(never()).deleteById(any());
+    // when
+    channelService.delete(channelId);
+
+    // then
+    verify(messageRepository).deleteAllByChannelId(eq(channelId));
+    verify(readStatusRepository).deleteAllByChannelId(eq(channelId));
+    verify(channelRepository).deleteById(eq(channelId));
   }
-}
+
+  @Test
+  @DisplayName("존재하지 않는 채널 삭제 시도 시 실패")
+  void deleteChannel_WithNonExistentId_ThrowsException() {
+    // given
+    given(channelRepository.existsById(eq(channelId))).willReturn(false);
+
+    // when & then
+    assertThatThrownBy(() -> channelService.delete(channelId))
+        .isInstanceOf(ChannelNotFoundException.class);
+  }
+} 
